# spx-helper

./: .cursorrules  .gitignore  .gitlab-ci.yml  .release-notification  AGENTS.md  API_DETAIL_VIEW.md  API_TRACKER_IMPLEMENTATION_GUIDE.md  BUGFIX_TEXT_SELECTION_REALTIME.md  CHANGELOG.md  CHANGELOG_v2.9.0.md  CHROME_EXTENSION_DATA_SYNC_GUIDE.md  CLEANUP_v2.14.0.md  CLICKHOUSE_INSERT_SOLUTION.md  DATA_SYNC_USER_GUIDE.md  DEBUG_TEST_GUIDE.md  FEATURE_AI_API_ANALYSIS.md  FIX_CHECKLIST.md  FMS_QUICK_LINKS_GUIDE.md  GIT_WORKFLOW.md  HIGHLIGHT_FEATURE.md  INSTALL.md  INTERCEPT_TEST_GUIDE.md  LICENSE  PANEL_FILTER_DEBUG.md  QUICK_DEBUG_GUIDE.md  QUICK_TEST_CHECKLIST.md  README.md  RELEASE_NOTES_v2.13.0.md  START_TESTING.md  TABLE_STRUCTURE_SYNC.md  TESTING_GUIDE.md  VERSION_2.9.0_SUMMARY.md  WINDOW_MODE_FIX.md  WINDOW_MODE_FIX_V2.md  WINDOW_MODE_OPTIMIZATION.md  WINDOW_MODE_TEST.md  background.js  calendar-config.js  content.js  fms-test.html  (+17 more)
.codex/: config.toml
.cursor/rules/: chrome-extension.mdc  doc-sync.mdc  general.mdc  git-workflow.mdc  mcp-tools.mdc  seatalk-agent-testing.mdc  seatalk-agent.mdc  seatalk-cdp-debug.mdc
.cursor/skills/: README.md
.githooks/: commit-msg  pre-commit  pre-push
.githooks/lib/: version-step.sh
.github/: README.md
chrome-extension/: calendar-config.html  content.js  manifest.json  popup.html  popup.js  styles.css
chrome-extension/ck_sync/: DDL_SYNC_TEST_RESULTS.md  FINAL_DDL_SOLUTION.md  IMPLEMENTATION_SUMMARY.md  test_and_run.sh  test_create_as_select.py  test_ddl.py  test_live_connection.py  test_test_ddl.py
chrome-extension/images/: README.md
chrome-extension/station_query/: DEMO.md  DEPLOYMENT_SUCCESS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  SYNC_TEST_REPORT.md  TECHNICAL.md  WORKFLOW.md  requirements.txt  station_cli.py  sync_station_data.py  test_station_query.py  test_sync_demo.py
ck_sync/: DDL_SYNC_CONCLUSION.md  DDL_SYNC_GUIDE.md  QUICK_REFERENCE.md  README.md  requirements.txt  sync_with_ddl.py  test_live_ddl.py
ck_sync/core/: clickhouse_client.py  sql_parser.py
docs/: BRANCH_STRATEGY.md  CATEGORY_MANAGEMENT.md  CHANGELOG.md  CLEANUP_PLAN.md  CONFLUENCE_DOC.md  DISTRIBUTION.md  GIT_WORKFLOW.md  INDEX.md  INSTALL.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  RELEASE_LOG.md  SEATALK_AGENT_UPDATE_REPRO_v3.1.1.md  SKILL_INSTALL.md  USAGE.md  USER_GUIDE.html  USER_GUIDE.md  index.html  seatalk-agent-tech-sharing.html  发布说明.md  快速安装指南.md  数据同步系统实现指南.md
docs/api/: AGENT_SYSTEM_PROMPT.md  API_INTEGRATION_GUIDE.md
docs/architecture/: CLICKHOUSE_INSERT_SOLUTION.md  DATA_SYNC_ARCHITECTURE.md  MAIN_WORLD_SOLUTION.md  SIMPLE_VS_COMPLEX_SOLUTION.md  STATION_QUERY_REFACTOR.md
docs/bugfixes/: BUG_FIXES_v2.9.0.md  DATA_MATCHING_FIX.md  DEBUG_SHORT_NUMBER_MATCH.md  DIAGNOSTIC_STEPS.md  EVENT_PROPAGATION_FIX.md  IMPROVEMENT_AI_INLINE_DISPLAY.md  SVG_COMPATIBILITY_FIX.md  URGENT_DEBUG.md  WINDOW_MODE_DEBUG.md
docs/diagrams/: README.md  hub-driver-overview-v2-lineage.drawio  hub-driver-overview-v2-lineage.drawio.xml
docs/features/: API_DATA_TRACKER.md  API_TRACKER_DONE.md  API_TRACKER_ENHANCEMENT.md  (+13 more)
images/: README.md
mcp-tools/: MCP_RECOMMENDATIONS.md  README.md
mcp-tools/api-trace/: README.md  api_trace_server.py  pyproject.toml
mcp-tools/chrome-auth/: README.md  pyproject.toml
mcp-tools/chrome-auth/chrome_auth/: __init__.py  cache.py  cdp_provider.py  cookie_provider.py  diagnostic.py  types.py
mcp-tools/chrome-auth/scripts/: start_chrome_remote_debug.sh  verify_datasuite_auth.py
mcp-tools/chrome-auth/tests/: test_cdp_provider.py  test_diagnostic.py
mcp-tools/ck-query/: README.md  ck_mcp_server.py  debug_ck2_ck6.py  mcp_config_template.json  pyproject.toml
mcp-tools/datamap-query/: README.md  batch_update_table_status.py  datamap_mcp_server.py  pyproject.toml
mcp-tools/datastudio-mcp/: .gitignore  README.md  pyproject.toml
mcp-tools/datastudio-mcp/datastudio_mcp/: mcp_server.py
mcp-tools/datastudio-mcp/datastudio_mcp/datastudio_client/: __init__.py  config.py  cookie_manager.py  datastudio_api_client.py  datastudio_util.py
mcp-tools/flink-query/: README.md  flink_mcp_server.py  pyproject.toml
mcp-tools/presto-query/: README.md  example_use_in_code.py  presto_mcp_server.py  presto_query_tool.py  pyproject.toml  query_presto.py
mcp-tools/presto-query/tests/: test_idc_normalization.py
mcp-tools/scheduler-query/: README.md  datasuite_bulk_api.py  mart_sla_instance_api.py  mart_sla_parser.py  mart_sla_shortlink.py  pyproject.toml  scheduler_mcp_server.py  scheduler_task_code.py
mcp-tools/scheduler-query/tests/: test_extract_task_code.py  test_mart_sla_instance_api.py  test_mart_sla_parser.py  test_mart_sla_shortlink.py  test_presto_hints.py
mcp-tools/seatalk-group/: README.md  pyproject.toml  seatalk_group_server.py
mcp-tools/seatalk-reader/: README.md  pyproject.toml  seatalk_reader_server.py
mcp-tools/spark-query/: README.md  mcp_config_template.json  pyproject.toml  spark_mcp_server.py
presto-tools/: PRESTO_ALL_SOLUTIONS.md  PRESTO_CONFIG.md  PRESTO_MCP_CONFIG_GUIDE.md  PRESTO_MCP_README.md  PRESTO_MCP_SHARING_GUIDE.md  PRESTO_MCP_TEST_GUIDE.md  PRESTO_SUCCESS.md  PRESTO_SUMMARY.md  PRESTO_TEST.md  PRESTO_TEST_FIX.md  PYTHON_QUERY_GUIDE.md  QUICK_TEST_GUIDE.md  README.md  README_PRESTO_PYTHON.md  SIMPLE_QUERY_GUIDE.md  install_mcp.sh  mcp_config_template.json  presto_query_guide.md  test_query.sh
scripts/: README.md  _ingest_ds_cookie_to_tmp.py  batch_invite_group.py  build-icons.js  cdp_seatalk_smoke.py  codex-mcp-launch.sh  finish-release-push.sh  notify-release.sh  probe-datasuite-sla-cdp.js  probe-seatalk-cdp.js  push-release.sh  refresh_datasuite_sla_sheets.py  setup-hooks.sh  setup-mcp-env.sh  sync_skills.sh  verify-cdp.js  verify-hooks.sh
seatalk-agent/: install.sh  launch.sh  lh_trip_df_ph_columns.json  lh_trip_station_columns.json  package.json  pnpm-lock.yaml  seatalk-cdp-daemon.sh
station_query/: DEMO_MODE.md  README.md  README_CN.md  SYNC_GUIDE.md  USAGE.md  start.sh  station_api.py  station_query.py  sync_station_data.py
(+100 files in other folders)
