[project]
name = "spx-ck-query-mcp"
version = "0.1.0"
description = "ClickHouse MCP Server - 为 Cursor 提供 ClickHouse 查询能力"
requires-python = ">=3.9"
dependencies = [
    "mcp",
    "requests",
    "urllib3",
]

[project.scripts]
ck-query-mcp = "ck_mcp_server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["ck_mcp_server"]
