[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datamap-mcp"
version = "0.1.0"
description = "DataSuite DataMap 表元数据查询 MCP 工具"
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    "browser-cookie3>=0.19.1",
]

[project.scripts]
datamap-mcp = "datamap_mcp_server:main"
