[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flink-mcp"
version = "0.2.0"
description = "Flink 全栈查询与诊断 MCP 工具（DataSuite + Keyhole + Grafana）"
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    "browser-cookie3>=0.19.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["flink_mcp_server.py"]

[project.scripts]
flink-mcp = "flink_mcp_server:main"
