[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scheduler-mcp"
version = "0.1.0"
description = "DataSuite Scheduler 平台查询 MCP 工具"
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    "browser-cookie3>=0.19.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "scheduler_mcp_server.py",
    "scheduler_task_code.py",
    "mart_sla_parser.py",
    "mart_sla_shortlink.py",
    "mart_sla_instance_api.py",
]

[project.scripts]
scheduler-mcp = "scheduler_mcp_server:main"
