[project]
name = "spx-seatalk-group-mcp"
version = "0.1.0"
description = "SeaTalk Group MCP Server - 批量拉群与群管理工具"
requires-python = ">=3.9"
dependencies = [
    "mcp",
    "requests",
]

[project.scripts]
seatalk-group-mcp = "seatalk_group_server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["seatalk_group_server"]
